--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Consumer Insights" />
     <meta name="twitter:description" content="Our 2020 Consumer Insights Survey examines the crossroads of COVID-19 and prescription drug pricing." />
-            <meta property="og:image" content="https://rxsavingssolutions.com/assets/img/asset/bWFpbi8yMDIxX2NvbnN1bWVyLWluc2lnaHRzX29nX2ltYWdlLmpwZw==?p=seo&fit=max&s=7fc7e9f54934113881a8d18d7157b5e8" />
+            <meta property="og:image" content="https://rxsavingssolutions.com/assets/2020_ConsumerInsights/stilloutofcontrol_1.png" />
         <meta property="og:image:width" content="1000" />
         <meta property="og:image:height" content="523" />
         <meta name="twitter:image" content="https://rxsavingssolutions.com/assets/img/asset/bWFpbi8yMDIxX2NvbnN1bWVyLWluc2lnaHRzX29nX2ltYWdlLmpwZw==?p=seo&fit=max&s=7fc7e9f54934113881a8d18d7157b5e8" />
