--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head class="no-js">
+    
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="referrer" content="origin-when-cross-origin" />
+    <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
 
+    <title>Now Is the Time for Medicare Advantage Plans to Re-align the Stars | Rx Savings Solutions</title>
+    <meta name="description" content="Each day is one day closer to 2023, and an opportunity to implement a member-facing solution that both meets mandates and makes for happier members." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Now Is the Time for Medicare Advantage Plans to Re-align the Stars" />
+    <meta property="og:description" content="Each day is one day closer to 2023, and an opportunity to implement a member-facing solution that both meets mandates and makes for happier members." />
+    <meta property="og:url" content="https://rxsavingssolutions.com/blog/time-for-medicare-advantage-plans-to-re-align-the-stars" />
+    <meta property="og:site_name" content="Rx Savings Solutions" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Now Is the Time for Medicare Advantage Plans to Re-align the Stars" />
+    <meta name="twitter:description" content="Each day is one day closer to 2023, and an opportunity to implement a member-facing solution that both meets mandates and makes for happier members." />
+    <meta property="og:image" content="https://rxsavingssolutions.com/assets/img/asset/bWFpbi9ibG9nX3Bob3Rvcy8yMDIxLWJsb2ctbWEtc3Rhci1yYXRpbmdzLmpwZWc=?p=seo&fit=max&s=fdaa082531559cb5c60970fdcaa546e9" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="784" />
+    <meta name="twitter:image" content="https://rxsavingssolutions.com/assets/img/asset/bWFpbi9ibG9nX3Bob3Rvcy8yMDIxLWJsb2ctbWEtc3Rhci1yYXRpbmdzLmpwZWc=?p=seo&fit=max&s=fdaa082531559cb5c60970fdcaa546e9" />
+    <meta name="twitter:image:alt" content="A computer screen depicting how beneficiaries rate their Medicare Advantage plans based on number of stars" />
+    
+    <meta property="og:image:alt" content="A computer screen depicting how beneficiaries rate their Medicare Advantage plans based on number of stars" />
+
+</head>
+
+<body>
+  This is a test Page
+</body
+</html>
